--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   
   <!-- Title -->
-  <title>Project Team #: Topic, COSI 116A F23</title>
+  <title>Graduate Group 4: Topic, COSI 116A F23</title>
   
   <!-- CSS Styling -->
   <link rel="stylesheet" href="style.css">
@@ -150,5 +150,6 @@
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
   <script src="js/visualization.js"></script>
+  <script src="js/furniture.js"></script>
 </body>
 </html>
