--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
   <div class="vis-holder">
     <!-- Change viewbox to whatever you want, e.g. "0 0 1000 6000" This determines your aspect ratio and coordinate system -->    
     <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
+    <svg id="vis-svg-2" viewbox="0 0 1000 600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <g id="multi-family" fill="white" stroke="black" stroke-width="2.5">
+        <!-- House -->
+        <rect id="house" x="100" y="200" width="800" height="375" />
+        <!-- Roof -->
+        <polygon id="roof" points="100,200 500,50 900,200" />
+        <!-- Doors -->
+        <rect id="door1" x="200" y="350" width="100" height="200" />
+        <rect id="door2" x="350" y="350" width="100" height="200" />
+        <rect id="door3" x="550" y="350" width="100" height="200" />
+        <rect id="door4" x="700" y="350" width="100" height="200" />
+        <!-- Door Knobs -->
+        <circle id="door-knob1" cx="280" cy="450" r="5" />
+        <circle id="door-knob2" cx="430" cy="450" r="5" />
+        <circle id="door-knob3" cx="630" cy="450" r="5" />
+        <circle id="door-knob4" cx="780" cy="450" r="5" />
+        <!-- Steps -->
+        <rect id="step1" x="200" y="550" width="100" height="25" />
+        <rect id="step2" x="350" y="550" width="100" height="25" />
+        <rect id="step3" x="550" y="550" width="100" height="25" />
+        <rect id="step4" x="700" y="550" width="100" height="25" />
+
+      </g>
+    </svg>
+
     <svg id="vis-svg"
       preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       
@@ -151,5 +176,6 @@
   <script src="lib/d3.v4/d3.v4.js"></script>
   <script src="js/visualization.js"></script>
   <script src="js/furniture.js"></script>
+  <script src="js/multifamily.js"></script>
 </body>
 </html>
