removed commented html code

--- a/index.html
+++ b/index.html
@@ -40,53 +40,7 @@
   </div>
 
   <!-- Your visualization here -->
-  <div class="vis-holder">
-<!--    <svg id="vis-svg-2"-->
-<!--      preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">-->
-
-<!--      <g id="title" fill="white" stroke="black" stroke-width="2.5">-->
-<!--          <rect id="vis-svg-2-title" x="710" y="30" width="180" height="40" />-->
-<!--          <text x="720" y="60" ></text>-->
-<!--      </g>-->
-
-<!--      &lt;!&ndash; Back button &ndash;&gt;-->
-<!--      <g id="back-button" fill="white" stroke="black" stroke-width="2.5">-->
-<!--        <rect id="back" x="900" y="30" width="80" height="40" />'-->
-<!--        <text x="910" y="60" >Back</text>-->
-<!--      </g>-->
-
-<!--      &lt;!&ndash; Room Filter &ndash;&gt;-->
-<!--      <foreignObject x="700" y="90" width="300" height="200">-->
-<!--        <body xmlns="http://www.w3.org/1999/xhtml">-->
-<!--            <div class="filter-container">-->
-<!--                &lt;!&ndash; Filters &ndash;&gt;-->
-<!--                <div class="filter">-->
-<!--                  <label for="poverty">Poverty Level:</label>-->
-<!--                  <input type="range" id="poverty" name="poverty" min="0" max="100">-->
-<!--                  <span id="povertyValue">50</span>-->
-<!--              </div>-->
-<!--              <div class="filter">-->
-<!--                  <label for="education">Education Level:</label>-->
-<!--                  <input type="range" id="education" name="education" min="0" max="100">-->
-<!--                  <span id="educationValue">50</span>-->
-<!--              </div>-->
-<!--              <div class="filter">-->
-<!--                  <label for="ownership">Ownership Rate:</label>-->
-<!--                  <input type="range" id="ownership" name="ownership" min="0" max="100">-->
-<!--                  <span id="ownershipValue">50</span>-->
-<!--              </div>-->
-<!--              <div class="filter">-->
-<!--                  <label for="income">Income Level:</label>-->
-<!--                  <input type="range" id="income" name="income" min="0" max="100">-->
-<!--                  <span id="incomeValue">50</span>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--        </body>-->
-<!--    </foreignObject>-->
-
-<!--    &lt;!&ndash; Don't delete the closing tag! &ndash;&gt;-->
-<!--    </svg>-->
-  </div>
+  <div class="vis-holder"></div>
 
   <!-- Your writeup goes here -->
   <div class = "content-column">
