added room filter buttons for floorplans

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
     <p><em>Include the interactive visualization as part of this page. Static example follows.</em></p>
   </div>
 
+    <!-- Filter Buttons, initially hidden -->
+  <div id="filterButtons" style="display: none;">
+    <button id="povertyFilter">Poverty</button>
+    <button id="educationFilter">Education Level</button>
+    <button id="ownershipFilter">Ownership</button>
+    <button id="incomeFilter">Income</button>
+  </div>
+
   <!-- Your visualization here -->
   <div class="vis-holder"></div>
 
