combined code from mfh & furniture to create more SVG visualization methods

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Graduate Group 4: Topic, COSI 116A F23</title>
@@ -17,11 +18,12 @@
 
 <body>
   <span id="forkongithub">
-    <a href="https://github.com/COSI116A-Brandeis-InfoVis-Fall23/cosi-116a-final-project-code-AG3NTZ3R0.git">Fork me on GitHub</a>
+    <a href="https://github.com/COSI116A-Brandeis-InfoVis-Fall23/cosi-116a-final-project-code-AG3NTZ3R0.git">Fork me on
+      GitHub</a>
   </span>
 
   <!-- Your writeup goes here -->
-  <div class = "content-column">
+  <div class="content-column">
     <h1>Graduate Group 4: Topic, COSI 116A F23</h1>
     <p>
       <strong>Brandon Lacy</strong>,
@@ -29,53 +31,62 @@
       <strong>Christine Nguyen</strong>,
       <strong>Kaiyu Peng</strong>
     </p>
-    <p>Project-long Course Project as part of COSI 116A: Information Visualization, taught by <a href="https://cs.brandeis.edu/~dylan/">Prof. Dylan Cashman</a>, <a href="https://cs.brandeis.edu/">Brandeis University</a>.</p>
+    <p>Project-long Course Project as part of COSI 116A: Information Visualization, taught by <a
+        href="https://cs.brandeis.edu/~dylan/">Prof. Dylan Cashman</a>, <a href="https://cs.brandeis.edu/">Brandeis
+        University</a>.</p>
 
     <h1>Motivation</h1>
     <p><em>Summary of user needs and motivating questions.</em></p>
-    <p><em>Expectation: There is a clear focus, and a developed explanation of the problem, and a reasonable response is proposed.</em></p>
+    <p><em>Expectation: There is a clear focus, and a developed explanation of the problem, and a reasonable response is
+        proposed.</em></p>
 
     <h1>Visualization</h1>
     <p><em>Include the interactive visualization as part of this page. Static example follows.</em></p>
   </div>
 
-    <!-- Filter Buttons, initially hidden -->
+  <!-- Filter Buttons, initially hidden -->
   <div id="filterButtons" style="display: none;">
     <button id="povertyFilter">Poverty</button>
     <button id="educationFilter">Education Level</button>
     <button id="ownershipFilter">Ownership</button>
     <button id="incomeFilter">Income</button>
+    <button id="back">Go back</button>
   </div>
 
   <!-- Your visualization here -->
   <div class="vis-holder"></div>
 
   <!-- Your writeup goes here -->
-  <div class = "content-column">
+  <div class="content-column">
     <h1>Demo Video</h1>
-    <p><em>Embedded MP4 demo video using the HTML5 &lt;video&gt; tag. For example, this screen recording Prof. Cody Dunne made of Mike Bostock's flexible transitions in D3 slide:</em></p>
+    <p><em>Embedded MP4 demo video using the HTML5 &lt;video&gt; tag. For example, this screen recording Prof. Cody
+        Dunne made of Mike Bostock's flexible transitions in D3 slide:</em></p>
     <video controls width="100%">
       <source src="http://www.ccs.neu.edu/home/cody/courses/shared/d3-flexible-transitions.mp4" type="video/mp4">
       <p>Your browser doesn't support HTML5 video. Here is
-       a <a href="http://www.ccs.neu.edu/home/cody/courses/shared/d3-flexible-transitions.mp4">link to the video</a> instead.</p>
+        a <a href="http://www.ccs.neu.edu/home/cody/courses/shared/d3-flexible-transitions.mp4">link to the video</a>
+        instead.</p>
     </video>
 
     <h1>Visualization explanation</h1>
-    <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through, and linked presentation slides.</em></p>
+    <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through, and linked presentation
+        slides.</em></p>
 
     <h1>Data Analysis</h1>
     <p><em>Summary of data, data types, and data preprocessing.</em></p>
-    <p><em>Expectation: Data sources match the problem statement and are appropriate. These descriptions should be very explicit so someone could read your page and properly reproduce your results.</em></p>
+    <p><em>Expectation: Data sources match the problem statement and are appropriate. These descriptions should be very
+        explicit so someone could read your page and properly reproduce your results.</em></p>
 
     <h1>Task Analysis</h1>
     <p><em>Summary of task table.</em></p>
-    <p><em>Expectation: Clearly describes domain tasks, processes, goals and abstract tasks for domain problems.</em></p>
+    <p><em>Expectation: Clearly describes domain tasks, processes, goals and abstract tasks for domain problems.</em>
+    </p>
 
     <h1>Design Process</h1>
     <p><em>Sketches and design choices to justify final visualization.</em></p>
     <p><em>Expectation: Evidence of iterative improvement.
-    Logical discussion of design choices grounded in theory from course.
-    Discusses feedback from usability testing.</em></p>
+        Logical discussion of design choices grounded in theory from course.
+        Discusses feedback from usability testing.</em></p>
 
 
     <h1>Conclusion</h1>
@@ -83,18 +94,22 @@
     <p><em>Expectation: Meaningfully wraps up project and has good future directions.</em></p>
 
     <h1>Acknowledgments</h1>
-    <p><em>List here where any code, packages/libraries, text, images, designs, etc. that you leverage come from.</em></p>
+    <p><em>List here where any code, packages/libraries, text, images, designs, etc. that you leverage come from.</em>
+    </p>
     <ul>
       <li><a href="https://d3js.org/">D3: Data-Driven Documents</a> by Mike Bostock.</li>
-      <li><a href="https://codepo8.github.io/css-fork-on-github-ribbon/#">Pure CSS responsive "Fork me on GitHub" ribbon</a> by Chris Heilmann.</li>
+      <li><a href="https://codepo8.github.io/css-fork-on-github-ribbon/#">Pure CSS responsive "Fork me on GitHub"
+          ribbon</a> by Chris Heilmann.</li>
     </ul>
   </div>
 
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
   <script src="js/furniture.js"></script>
+  <script src="js/visualization.js"></script>
   <script src="js/hexagon.js"></script>
   <script src="js/multifamily.js"></script>
-  <script src="js/visualization.js"></script>
+
 </body>
+
 </html>
