completes motivation section with general data analysis section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,24 @@
       <strong>Christine Nguyen</strong>,
       <strong>Kaiyu Peng</strong>
     </p>
-    <p>Project-long Course Project as part of COSI 116A: Information Visualization, taught by <a href="https://cs.brandeis.edu/~dylan/">Prof. Dylan Cashman</a>, <a href="https://cs.brandeis.edu/">Brandeis University</a>.</p>
+
+    <p>
+      Project-long Course Project as part of COSI 116A: Information Visualization,
+      taught by <a href="https://cs.brandeis.edu/~dylan/">Prof. Dylan Cashman</a>,
+      <a href="https://cs.brandeis.edu/">Brandeis University</a>.
+    </p>
 
     <h1>Motivation</h1>
-    <p><em>Summary of user needs and motivating questions.</em></p>
-    <p><em>Expectation: There is a clear focus, and a developed explanation of the problem, and a reasonable response is proposed.</em></p>
+    <p>
+      <em>
+        We have set out to create an interactive and educational visualization tool that addresses the organizational
+        need for a straightforward way to understand the complex relationship of poverty and racial demographics with
+        housing inequality in the United States. The tool allows users to explore and compare different household
+        conditions through an interactive floor plan with color-coded items which represent income and expenses, thereby
+        transforming abstract data into a vivid, tangible experience that powerfully conveys the realities of housing
+        inequality.
+      </em>
+    </p>
 
     <h1>Visualization</h1>
     <p><em>Include the interactive visualization as part of this page. Static example follows.</em></p>
@@ -64,7 +77,18 @@
     <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through, and linked presentation slides.</em></p>
 
     <h1>Data Analysis</h1>
-    <p><em>Summary of data, data types, and data preprocessing.</em></p>
+    <p>
+      <em>
+        Our project uses data from the American Community Survey Supplemental Poverty Measure (ACS SPM) from 2009 to
+        2019, focusing on demographics, economics, and housing to understand poverty-related trends. The dataset,
+        comprising 47 columns, includes categorical, ordinal, and quantitative types. We aggregated this data into
+        averages for each racial demographic, which was crucial for dynamically generating furniture in the floor plan
+        of our tool. Specific features from the dataset were selected to represent different furniture pieces,
+        illustrating various household conditions. Accompanying the data, a dictionary provided clear explanations of
+        each column, enhancing our understanding. Extensive data processing was necessary, revealing patterns and
+        trends not immediately visible in the raw data, and aiding in the creation of our visualizations.
+      </em>
+    </p>
     <p><em>Expectation: Data sources match the problem statement and are appropriate. These descriptions should be very explicit so someone could read your page and properly reproduce your results.</em></p>
 
     <h1>Task Analysis</h1>
