beautifies the home

--- a/index.html
+++ b/index.html
@@ -92,18 +92,29 @@
     <p><em>Expectation: Data sources match the problem statement and are appropriate. These descriptions should be very explicit so someone could read your page and properly reproduce your results.</em></p>
 
     <h1>Task Analysis</h1>
-    <p><em>Summary of task table.</em></p>
+    <p>
+      <em>
+        Summary of task table.
+      </em>
+    </p>
     <p><em>Expectation: Clearly describes domain tasks, processes, goals and abstract tasks for domain problems.</em></p>
 
     <h1>Design Process</h1>
-    <p><em>Sketches and design choices to justify final visualization.</em></p>
+    <p>
+      <em>
+        Sketches and design choices to justify final visualization.
+      </em>
+    </p>
     <p><em>Expectation: Evidence of iterative improvement.
     Logical discussion of design choices grounded in theory from course.
     Discusses feedback from usability testing.</em></p>
 
-
     <h1>Conclusion</h1>
-    <p><em>Short summary of work completed and areas for improvement/future-work.</em></p>
+    <p>
+      <em>
+        Short summary of work completed and areas for improvement/future-work.
+      </em>
+    </p>
     <p><em>Expectation: Meaningfully wraps up project and has good future directions.</em></p>
 
     <h1>Acknowledgments</h1>
