eliminates .vscode folder from repository and adds conclusion

--- a/index.html
+++ b/index.html
@@ -111,7 +111,15 @@
     <h1>Conclusion</h1>
     <p>
       <em>
-        Short summary of work completed and areas for improvement/future-work.
+        In conclusion, our project not only simplifies the complex narrative of housing inequality in the United States
+        but also brings it to life through an interactive floor plan. By aggregating and processing extensive ACS SPM
+        data, focusing on key demographic and economic aspects, and converting these into tangible, color-coded
+        elements representing household conditions, we have created a tool that not only educates but also engages
+        users in understanding and exploring the nuances of this critical social issue. This approach transforms
+        abstract statistics into a relatable, visual story, making the realities of housing inequality more accessible
+        and comprehensible to a broader audience. Our work underscores the power of data visualization in bridging the
+        gap between complex data and public understanding, paving the way for more informed discussions and potential
+        solutions to this persistent challenge.
       </em>
     </p>
     <p><em>Expectation: Meaningfully wraps up project and has good future directions.</em></p>
