added Task Analysis section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
     <h1>Task Analysis</h1>
     <p>
       <em>
-        Summary of task table.
+        The main task of our visualization is to discover the correlation between housing inequality and poverty trends 
+        among diverse racial backgrounds in the United States. We also want to present the impact and variations introduced 
+        by other demographic factors on this relationship, particularly on people's housing choices and economic situation. 
+        Users are able to derive personalized insights through exploring the nuanced economic dynamics within a unit accross 
+        different demographic and housing scenarios.
       </em>
     </p>
     <p><em>Expectation: Clearly describes domain tasks, processes, goals and abstract tasks for domain problems.</em></p>
