--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
-  <script src="js/visualization.js"></script>
+  <script type="module" src="js/visualization.js"></script>
   <script src="js/data_generation.js"></script>
   <script src="js/furniture.js"></script>
   <script src="js/hexagon.js"></script>
