refactored floor plan visualization into its own file for clarity

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
   <script type="module" src="js/visualization.js"></script>
   <script src="js/data_generation.js"></script>
   <script src="js/furniture.js"></script>
+  <script src="js/floor_plan.js"></script>
   <script src="js/hexagon.js"></script>
   <script src="js/multifamily.js"></script>
 </body>
