--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@
   <script src="js/floor_plan.js"></script>
   <script src="js/hexagon.js"></script>
   <script src="js/multifamily.js"></script>
+<script src="js/room_filter.js"></script>
 </body>
 </html>
