refactors codebase to be in line with oop best practices

--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
   <script type="module" src="js/visualization.js"></script>
   <script src="js/data_generation.js"></script>
   <script src="js/hexagon.js"></script>
-  <script src="js/multifamily.js"></script>
+  <script type="module" src="js/multi_family_home.js"></script>
   <script src="js/room_filter.js"></script>
+  <script type="module" src="js/svg_chart.js"></script>
+  <script type="module" src="js/room_key.js"></script>
+  <script type="module" src="js/furniture.js"></script>
 </body>
 </html>
