--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
 
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
-  <script type="module" src="js/visualization.js"></script>
-  <script src="js/data_generation.js"></script>
-  <script src="js/hexagon.js"></script>
-  <script type="module" src="js/multi_family_home.js"></script>
-  <script src="js/room_filter.js"></script>
-  <script type="module" src="js/svg_chart.js"></script>
-  <script type="module" src="js/room_key.js"></script>
   <script type="module" src="js/furniture.js"></script>
+  <script type="module" src="js/multi_family_home.js"></script>
+  <script type="module" src="js/room_key.js"></script>
+  <script type="module" src="js/svg_chart.js"></script>
+  <script type="module" src="js/visualization.js"></script>
+<!--  <script src="js/data_generation.js"></script>-->
+  <script src="js/hexagon.js"></script>
+  <script src="js/room_filter.js"></script>
 </body>
 </html>
